--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngFor="let book of books" [ngClass]="{javascript: book.title?.indexOf('JavaScript') != -1}"
+  <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}"
   >
     <h4>{{book.title}}</h4>
     <div>Author: {{book.author}}</div>
