--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,10 +1,11 @@
 <div>
   <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}"
   >
-    <h4>{{book.title}}</h4>
+    <h4>{{book.title | quote}}</h4>
     <div>Author: {{book.author}}</div>
     <div>Year: {{book.year}}</div>
     <div>Pages: {{book.pages}}</div>
+    <div>Price: {{book.price | currency: 'UAH': 'symbol'}}</div>
     <div>Description: {{book.description}}
     </div>
   </div>
