--- a/src/app/book-registration/book-registration.component.html
+++ b/src/app/book-registration/book-registration.component.html
@@ -1,19 +1,19 @@
 <div class="card">
   <div class="card-header">Book details</div>
   <div class="card-body">
-    <form #bookForm="ngForm" (ngSubmit)="register(bookForm.value)">
+    <form #bookForm="ngForm" (ngSubmit)="register()">
       <div class="form-group">
         <label>Title</label>
         <input type="text" class="form-control" name="title" placeholder="Enter book title"
-               #title required minlength="4" maxlength="50">
+               #title=ngModel [(ngModel)]="book.title" required minlength="4" maxlength="50">
       </div>
-      <div class="alert alert-danger">Please, enter book title</div>
+      <div class="alert alert-danger" *ngIf="isInvalid(title)">Please, enter book title</div>
       <div class="form-group">
         <label>Author</label>
         <input type="text" class="form-control" name="author" placeholder="Enter author"
-               #author required minlength="4" maxlength="50">
+               #author=ngModel [(ngModel)]="book.author" required minlength="4" maxlength="50">
       </div>
-      <div class="alert alert-danger">Please, enter book title</div>
+      <div class="alert alert-danger" *ngIf="isInvalid(author)">Please, enter book title</div>
       <button type="submit" class="btn btn-primary" [disabled]="!bookForm.valid">Save</button>
     </form>
   </div>
