Task 11. Fix directive

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -6,7 +6,7 @@
     <div>Year: {{book.year}}</div>
     <div>Pages: {{book.pages}}</div>
     <div>Price: {{book.price | currency: 'UAH': 'symbol'}}</div>
-    <div appHighlight highlightColor="'yellow'" [highlightText]="searchText">
+    <div appHighlight highlightColor="yellow" [highlightText]="searchText" [originalHTML]="book.description">
       Description: {{book.description}}</div>
     <input [(ngModel)]="searchText">
   </div>
