--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,13 +1,5 @@
 <div>
-  <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}"
-  >
-    <h4>{{book.title | quote}}</h4>
-    <div>Author: {{book.author}}</div>
-    <div>Year: {{book.year}}</div>
-    <div>Pages: {{book.pages}}</div>
-    <div>Price: {{book.price | currency: 'UAH': 'symbol'}}</div>
-    <div appHighlight highlightColor="yellow" [highlightText]="searchText" [originalHTML]="book.description">
-      Description: {{book.description}}</div>
-    <input [(ngModel)]="searchText">
+  <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}">
+    <app-book-details [book]="book"></app-book-details>
   </div>
 </div>
