--- a/src/app/book-registration/book-registration.component.html
+++ b/src/app/book-registration/book-registration.component.html
@@ -7,13 +7,15 @@
         <input type="text" class="form-control" name="title" placeholder="Enter book title"
                formControlName="title">
       </div>
-      <div class="alert alert-danger" *ngIf="isInvalid('title')">Please, enter book title</div>
+      <div class="alert alert-danger" *ngIf="isInvalid('title')">Please, enter valid book title</div>
       <div class="form-group">
         <label>Author</label>
         <input type="text" class="form-control" name="author" placeholder="Enter author"
                formControlName="author">
       </div>
-      <div class="alert alert-danger" *ngIf="isInvalid('author')">Please, enter book title</div>
+      <div class="alert alert-danger" *ngIf="isInvalid('author')">
+        Please, enter author (at least 2 words)
+      </div>
       <button type="submit" class="btn btn-primary" [disabled]="!bookForm.valid">Save</button>
     </form>
   </div>
