--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,3 +1,4 @@
+<app-book-registration></app-book-registration>
 <div>
   <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}">
     <app-book-details [book]="book"></app-book-details>
