--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<app-book-registration></app-book-registration>
-<app-books></app-books>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/'" routerLinkActive="active">Home</a>
+          <a class="nav-link" [routerLink]="'/books'" routerLinkActive="active">Books</a>
+          <a class="nav-link" [routerLink]="'/news'" routerLinkActive="active">News</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<router-outlet></router-outlet>
 
