--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/'" routerLinkActive="active">Home</a>
-          <a class="nav-link" [routerLink]="'/books'" routerLinkActive="active">Books</a>
-          <a class="nav-link" [routerLink]="'/news'" routerLinkActive="active">News</a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Book shop</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item me-auto mb-2 mb-lg-0">
+            <a class="nav-link" [routerLink]="'/books'" routerLinkActive="active">Books</a>
+            <a class="nav-link" [routerLink]="'/news'" routerLinkActive="active">News</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 </header>
