--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,6 +1,6 @@
 <app-book-registration></app-book-registration>
 <div>
-  <div *ngFor="let book of books" [ngClass]="{javascript: isJavaScript(book)}">
-    <app-book-details [book]="book"></app-book-details>
+  <div *ngFor="let book of books">
+    <a routerLink="/books/{{book.id}}" routerLinkActive="active"><h4>{{book.title}}</h4></a>
   </div>
 </div>
